--- a/TCPLogWindow/TCPLogWindow.vcxproj.filters
+++ b/TCPLogWindow/TCPLogWindow.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="Client.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DataBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
