--- a/TCPLogWindow/TCPLogWindow.vcxproj
+++ b/TCPLogWindow/TCPLogWindow.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="networking.h" />
     <ClInclude Include="Request.h" />
     <ClInclude Include="Server.h" />
+    <ClInclude Include="Utility.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
