--- a/TCPLogWindow/TCPLogWindow.vcxproj
+++ b/TCPLogWindow/TCPLogWindow.vcxproj
@@ -127,10 +127,13 @@
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Client.cpp" />
+    <ClCompile Include="DataBuffer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="networking.cc" />
     <ClCompile Include="Request.cpp" />
+    <ClCompile Include="Response.cpp" />
     <ClCompile Include="Server.cpp" />
+    <ClCompile Include="SocketData.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
@@ -138,7 +141,9 @@
     <ClInclude Include="DataBuffer.h" />
     <ClInclude Include="networking.h" />
     <ClInclude Include="Request.h" />
+    <ClInclude Include="Response.h" />
     <ClInclude Include="Server.h" />
+    <ClInclude Include="SocketData.h" />
     <ClInclude Include="Utility.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
